HTML File of The Jupyter Notebook

--- a/Image Classifier Project.html
+++ b/Image Classifier Project.html
@@ -7646,6 +7646,9 @@ GPU Workspaces about Keeping Your Session Active. You'll want to include code fr
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="c1"># TODO: Build and train your network</span>
+
+<span class="c1"># Understood how to go about training my network with assistance from this GitHub Repo: https://github.com/BettyKamande/Image-Classifier-AI-Programming-with-Python</span>
+
 <span class="c1"># Load a pre-trained network (VGG16 in this case)</span>
 <span class="n">model</span> <span class="o">=</span> <span class="n">models</span><span class="o">.</span><span class="n">vgg16</span><span class="p">(</span><span class="n">pretrained</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 <span class="n">model</span>
@@ -8342,7 +8345,7 @@ Epoch 4/4.. Train loss: 1.643.. Validation loss: 0.680.. Validation accuracy: 0.
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>The Model correctly predicts the image as a Foxglove flower with a very high accuracy</p>
+<p>The Model correctly predicts the image as a Foxglove flower with a very high probability/accuracy</p>
 </div>
 </div>
 </div>
